# ProyectoFinalCienciaDatos

./: .gitignore  README.md  proyecto_final_ciencia_datos.ipynb  pyproject.toml  requirements.txt
data/inter/: stage2.parquet  stage3.parquet
data/raw/: stage0.parquet.gzip  stage1.parquet  stage1_2.parquet  stage2.parquet
notebooks/: 01_limpieza.ipynb  02_exploración.ipynb  04_analisis.ipynb
src/common/: utils.py
src/data/: scraper.py  scrapper.py  scrapper_stage0.py
